--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,8 @@ jobs:
               run: |
                 python -m pip install --upgrade pip
                 pip install pandas numpy yfinance
+
+            - name: Executando .py
+              run: |
+                python teste_ci.py
             
